--- a/IW_ccFraud.ipynb
+++ b/IW_ccFraud.ipynb
@@ -48,16 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install matplotlib for visualizing tree later\n",
-    "!pip install -U matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# install graphviz as matplotlib will need this for the tree layout \n",
     "!pip install -U graphviz"
    ]
@@ -81,7 +71,6 @@
     "# Import necessary numerical libraries\n",
     "import numpy as np                                \n",
     "import pandas as pd                               \n",
-    "import matplotlib.pyplot as plt   \n",
     "from IPython.display import Image                 \n",
     "from IPython.display import display               \n",
     "from sklearn.datasets import dump_svmlight_file   \n",
@@ -95,7 +84,8 @@
     "import s3fs\n",
     "import pickle\n",
     "import tarfile\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -161,12 +151,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Perform SMOTE on nonTest_data to synthetically generate a more balanced data set\n",
+    "# Split resampled non-test data into training and validation sets\n",
     "nonTest_X = nonTest_data.drop('Class', axis=1)\n",
     "nonTest_y = nonTest_data['Class']\n",
     "\n",
-    "smote = SMOTE(random_state=42)\n",
-    "nonTest_X_res, nonTest_y_res = smote.fit_resample(nonTest_X, nonTest_y)"
+    "train_data_X, validation_data_X, train_data_y, validation_data_y = train_test_split( nonTest_X, nonTest_y, \\\n",
+    "                                                                                    test_size=(2.0/7.0), random_state=1987, stratify=nonTest_y ) "
    ]
   },
   {
@@ -175,9 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split resampled non-test data into training and validation sets\n",
-    "train_data_X, validation_data_X, train_data_y, validation_data_y = train_test_split( nonTest_X_res, nonTest_y_res, \\\n",
-    "                                                                                    test_size=(2.0/7.0), random_state=1987, stratify=nonTest_y_res ) "
+    "# Perform SMOTE on nonTest_data to synthetically generate a more balanced data set\n",
+    "smote = SMOTE(random_state=42)\n",
+    "train_data_X_res, train_data_y_res = smote.fit_resample(train_data_X, train_data_y)"
    ]
   },
   {
@@ -187,7 +177,7 @@
    "outputs": [],
    "source": [
     "# Transform training, validation, and test sets into libSVM format for use in xgboost\n",
-    "dump_svmlight_file(X=train_data_X, y=train_data_y, f='train.libsvm')\n",
+    "dump_svmlight_file(X=train_data_X_res, y=train_data_y_res, f='train.libsvm')\n",
     "dump_svmlight_file(X=validation_data_X, y=validation_data_y, f='validation.libsvm')\n",
     "dump_svmlight_file(X=test_data.drop(['Class'], axis=1), y=test_data['Class'], f='test.libsvm')\n",
     "\n",
