--- a/video-game-sales-xgboost.ipynb
+++ b/video-game-sales-xgboost.ipynb
@@ -322,6 +322,7 @@
     "                'us-east-1': '811284229777.dkr.ecr.us-east-1.amazonaws.com/xgboost:latest',\n",
     "                'us-east-2': '825641698319.dkr.ecr.us-east-2.amazonaws.com/xgboost:latest',\n",
     "                'eu-west-1': '685385470294.dkr.ecr.eu-west-1.amazonaws.com/xgboost:latest'\n",
+    "                'eu-west-2': '644912444149.dkr.ecr.eu-west-1.amazonaws.com/xgboost:latest'\n",
     "             }\n",
     "\n",
     "create_training_params = \\\n",
